chore: add custom .babelrc config with craco

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "target": "ES2021",
     "baseUrl": "src",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@mui/styled-engine": ["./node_modules/@mui/styled-engine-sc"]
     }
   },
   "include": ["src/**/*"],
